refactor: svg sprite 리팩토링

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="icon" type="image/svg+xml" href="./assets/zkvrm.svg" />
     <title>zkvrm</title>
+    <link rel="preload" href="./assets/icons.svg" as="image" type="image/svg+xml">
   </head>
   <body>
+    <div style="display: none;">
+      <include src="./assets/icons.svg"></include>
+    </div>
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
