feature: 서비스 워커 추가

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#0f172a" />
     <link rel="icon" type="image/svg+xml" href="./assets/zkvrm.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/icon-180.png" />
+    <link rel="manifest" href="./manifest.webmanifest" />
     <title>zkvrm</title>
     <link rel="preload" href="./assets/icons.svg" as="image" type="image/svg+xml">
   </head>
